--- a/index.html
+++ b/index.html
@@ -76,17 +76,31 @@
       <!-- <a href="#contact">Book now</a> -->
     </div>
   </div>
-  <div class="quick-sign-up-bar">
-    <form novalidate="novalidate" class="emailSubscribeForm">
-      <div class="InputAddOn">
-        <input type="email" class="InputAddOn-field" placeholder="Your email" id="emailSubscribe" required="required">
-        <button type="submit" class="InputAddOn-item">Subscribe</button>
+  <div id="mc_embed_signup">
+    <form action="//escaperoomsa.us11.list-manage.com/subscribe/post-json?u=f6de466c5adde3d308809f61b&amp;id=391ca5c5fc&c=?" method="get" id="mc-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+      <div id="mc_embed_signup_scroll">
+        <div class="email-name">
+          <input type="text" value="" name="FNAME" class="" id="mce-FNAME" placeholder="Your name" tabindex="1">
+        </div>
+        <div class="mc-field-group">
+          <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Your Email" tabindex="2">
+        </div>
+        <div id="mce-responses" class="clear">
+          <div class="response" id="mce-error-response" style="display:none"></div>
+          <div class="response" id="mce-success-response" style="display:none"></div>
+        </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+        <div style="position: absolute; left: -5000px;">
+          <input type="text" name="b_f6de466c5adde3d308809f61b_391ca5c5fc" tabindex="-1" value="">
+        </div>
+        <div class="clear">
+          <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button" tabindex="3">
+        </div>
       </div>
     </form>
     <div class="emailForm-messages">
-        <p></p>
+      <p></p>
     </div>
-    <p>We are opening soon, subscribe for updates and opening discounts.</p>
+    <p class="announcement">We are opening soon, subscribe for updates and opening discounts.</p>
   </div>
 </div>
 <section  class="what">
@@ -249,20 +263,20 @@
           </div>
           <div class="name--input--wrap">
             <label for="name">Name</label>
-            <input type="text" name="name" id="name" placeholder="Your name" tabindex="1" required="required"/><i class="icon-user2"></i>
+            <input type="text" name="name" id="name" placeholder="Your name" tabindex="4" required="required"/><i class="icon-user2"></i>
           </div>
           <div class="email--input--wrap">
             <label for="email">Email</label>
-            <input type="email" name="email" id="email" placeholder="Your email" tabindex="2" required="required"/><i class="icon-envelope-o"></i>
+            <input type="email" name="email" id="email" placeholder="Your email" tabindex="5" required="required"/><i class="icon-envelope-o"></i>
           </div>
           <div class="message--input--wrap">
             <label for="message">Message</label>
-            <textarea name="textarea" id="message" placeholder="Your message" tabindex="3" required="required" class="message"></textarea><i class="icon-pencil-square-o"></i>
+            <textarea name="textarea" id="message" placeholder="Your message" tabindex="6" required="required" class="message"></textarea><i class="icon-pencil-square-o"></i>
             <input type="hidden" name="_gotcha" style="display:none"/>
           </div>
         </fieldset>
         <div>
-          <input type="submit" value="Send Message" tabindex="4"/>
+          <input type="submit" value="Send Message" tabindex="7"/>
         </div>
       </form>
     </div>
