--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </div>
   </div>
   <div id="mc_embed_signup">
-    <form action="//escaperoomsa.us11.list-manage.com/subscribe/post-json?u=f6de466c5adde3d308809f61b&amp;id=391ca5c5fc&c=?" method="get" id="mc-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <form action="//escaperoomsa.us11.list-manage.com/subscribe/post?u=f6de466c5adde3d308809f61b&amp;id=391ca5c5fc" method="POST" id="mc-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
       <div id="mc_embed_signup_scroll">
         <div class="email-name">
           <input type="text" value="" name="FNAME" class="" id="mce-FNAME" placeholder="Your name" tabindex="1">
